# x-term

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
chrome-extension/: blocked.html  blocked.js  manifest.json  popup.html  popup.js  sw.js
native-host/: install.py  process_gate.config.json  process_gate.py  smoke_test.py  uninstall.py
tests/: __init__.py  test_cli.py  test_hosts.py  test_install.py  test_policy.py  test_process_gate.py
xgate/: __init__.py  chrome.py  cli.py  config.py  daemon.py  default_config.json  hosts.py  install.py  paths.py  policy.py  process_gate.py
